<resources>
  <string name="action_settings">Settings</string>
  <string name="server_running">Server is running</string>
  <string name="stop_server">Stop Server</string>
  <string name="server_down">Server is down</string>
  <string name="start_server">Start Server</string>
  <string name="SatelliteTestServer">Satellite Test Server</string>
  <string name="client_request_textview">Client Request:</string>
  <string name="entitlement_status_textview">Entitlement Status:</string>
  <string name="entitlement_status_disable">Entitlement Status is set to DISABLED.</string>
  <string name="entitlement_status_enable">Entitlement Status is set to ENABLED.</string>
  <string name="entitlement_status_incompatible">Entitlement Status is set to INCOMPATIBLE.</string>
  <string name="entitlement_status_provisioning">Entitlement Status is set to PROVISIONING.</string>
  <string name="plmn_change_textView">Can change plmn list</string>
  <string name="plmn_change_button">SAVE</string>
  <string name="plmn_restore_button">RESTORE</string>
  <string name="response_code_textview">Response code:</string>
  <string name="server_response_textview">Server response:</string>
  <string name="response_200">Server response code is set to 200 with body.</string>
  <string name="response_no">Server response code is set to no Response.</string>
  <string name="response_500">Server response code is set to 500.</string>
  <string name="response_503">Server response code is set to 503 with Retry-After header.</string>
  <string name="response_503_no_retry_after">Server response code is set to 503 no Retry-After header.</string>
  <string name="current_plmn">Current Plmn : </string>
  <string name="refresh_button">Refresh</string>
  <string-array name="entitlement_status_for_satellite">
    <item>ENABLED</item>
    <item>DISABLED</item>
    <item>INCOMPATIBLE</item>
    <item>PROVISIONING</item>
  </string-array>
  <string-array name="response">
    <item>200</item>
    <item>NO</item>
    <item>500</item>
    <item>503</item>
    <item>503_NO_RETRY_AFTER</item>
  </string-array>
  <string name="data_plan_type_label">Data Plan Type:</string>
  <string name="service_type_label">Service Type:</string>
  <string name="service_policy_label">Service Policy:</string>
  <string name="plmn_id_label">PLMN ID:</string>
  <string name="add_plmn_button">ADD TO PLMN LIST</string>
  <string name="bar_plmn_button">BARR PLMN</string>
  <string name="clear_all_button">CLEAR ALL</string>
  <string name="data_plan_type_checkbox">Include DataPlanType</string>
  <string name="data_service_checkbox">Data Service</string>
  <string name="voice_service_checkbox">Voice Service</string>
  <string name="barred_plmn_id_label">Barred PLMN ID:</string>
  <string-array name="data_plan_type_array">
    <item>metered</item>
    <item>unmetered</item>
  </string-array>
  <string-array name="service_type_array">
    <item>data</item>
    <item>voice</item>
  </string-array>
  <string-array name="service_policy_array">
    <item>unconstrained</item>
    <item>restricted</item>
    <item>constrained</item>
  </string-array>
</resources>